...
    
    //MARK:- viewDidLoad
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.accessibilityIdentifier = "PostView"
        tableView.accessibilityIdentifier = "postTableView"
        view.backgroundColor = UIColor(named: kBGCOLOR)
        
        onBordingView()
        setupUI()
        setupNavBarIcons()
    
    }
    
    //MARK:- SetupNavBar
...
