...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        
        view.backgroundColor = UIColor(named: kBGCOLOR)
        view.accessibilityIdentifier = "onboardingView"
        nextButton.accessibilityIdentifier = "next"
        prevButton.accessibilityIdentifier = "prev"
        
        self.delegate = self
        self.dataSource = self
        
        prevButton.isHidden = true
...
