...
        tableView.separatorStyle = .none
        tableView.backgroundColor = UIColor(named: kBGCOLOR)
        tableView.register(PostCommentTableViewCell.self, forCellReuseIdentifier: kPOSTCOMMENTTABLEVIEWCELLID)
        tableView.showsVerticalScrollIndicator = false
        tableView.estimatedSectionHeaderHeight = 100
        tableView.sectionHeaderHeight = UITableView.automaticDimension
        tableView.accessibilityIdentifier = "commentTableView"
        return tableView
    }()
    
    let titleStatusLabelNoComments: UILabel = {
      let label = UILabel()
        label.text = "No comments loaded"
...
